# helix-tools

./: .gitignore  AGENTS.md  Cargo.toml  IDEAS.md  README.md
.decisions/: 001-ui-data-rendering-strategy.md  002-linting-and-formatting-toolchain.md  003-binary-installation-strategy.md
.github/workflows/: ci.yml
.husky/hooks/: pre-commit
.ixchel/: config.toml
.ixchel/decisions/: dec-1d2c8f.md  dec-e7aea1.md
.ixchel/decisions/legacy/: 003-binary-installation-strategy.md  004-trait-based-storage-architecture.md
.ixchel/issues/: iss-6fe7c4.md  iss-93f6f1.md
.ruler/: AGENTS.md
.tickets/: bd-016416.md  bd-025b15.md  bd-028206.md  bd-0cb44a.md  bd-13ab17.md  bd-1470ef.md  bd-176b2e.md  bd-21a1ce.md  bd-23a9eb.md  bd-2a6f16.md  bd-31ee3d.md  bd-39ddc9.md  bd-3bb36d.md  bd-59a459.md  bd-64428f.md  bd-6a330e.md  bd-6af4f1.md  bd-6f84f9.md  bd-6f8f77.md  bd-750fb3.md  bd-82468c.md  bd-85cae7.md  bd-8e1923.md  bd-92268a.md  bd-93cb76.md  bd-96635d.md  bd-9a5bf9.md  bd-a0d865.md  bd-ab667d.md  bd-c0a351.md  bd-c51871.md  bd-c73b67.md  bd-c89a51.md  bd-c93c55.md  bd-d70228.md  bd-db2412.md  bd-e49cfc.md  bd-eb3ae6.md  bd-f52a2a.md  bd-f7d216.md  (+1 more)
apps/demo-got/: Cargo.toml
apps/ix-cli/specs/: design.md  requirements.md
apps/ix-cli/src/: main.rs
apps/ix-daemon/src/: client.rs  server.rs
apps/ix-mcp/src/: main.rs
crates/ix-config/: README.md
crates/ix-core/: Cargo.toml
crates/ix-core/specs/: design.md  requirements.md
crates/ix-core/src/: config.rs  entity.rs  id.rs  lib.rs  repo.rs
crates/ix-embeddings/: Cargo.toml
crates/ix-embeddings/docs/: MODEL_MANAGEMENT.md  PROVIDER_COMPARISON.md
crates/ix-embeddings/src/: lib.rs
crates/ix-helixdb-ops/: Cargo.toml
crates/ix-id/specs/: design.md
crates/ix-storage-surrealdb/: README.md
crates/ix-storage-surrealdb/src/: lib.rs  manifest.rs
demo-got/: AGENTS.md  Cargo.toml  README.md
demo-got/specs/: design.md
demo-got/src/: error.rs  lib.rs  loader.rs  main.rs  storage.rs  types.rs
docs/: AGENTS.md  next.config.mjs
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/components/: Contributors.tsx
docs/content/docs/: acknowledgments.mdx  architecture.mdx  configuration.mdx  getting-started.mdx  index.mdx  meta.json  principles.mdx
docs/lib/: layout.shared.tsx
hbd/: AGENTS.md  Cargo.toml  README.md  STYLE.md
hbd-ui/: package.json
hbd-ui/src/: app.css
hbd-ui/src-tauri/: README.md
hbd-ui/src-tauri/specs/: design.md
hbd-ui/src/routes/: +layout.svelte
hbd/specs/: README.md  design.md  requirements.md  tasks.md
hbd/src/: lib.rs  main.rs  markdown.rs
hbd/src/commands/: issue.rs  query.rs
hbd/src/domain/: graph.rs
helix/: README.md
helix-decisions/: CONTRIBUTING.md  Cargo.toml  README.md
helix-decisions/specs/: design.md  requirements.md  tasks.md
helix-decisions/src/: delta.rs  helix_backend.rs  lib.rs  loader.rs  main.rs  manifest.rs  searcher.rs  storage.rs
helix-docs/: Cargo.toml  README.md
helix-docs/specs/: design.md  requirements.md  tasks.md
helix-docs/src/: error.rs  lib.rs  main.rs
helix-docs/src/cli/: add.rs  get.rs  ingest.rs  library.rs  mod.rs  search.rs  source.rs  status.rs
helix-docs/src/config/: mod.rs
helix-docs/src/domain/: chunk.rs  document.rs  id.rs  library.rs  mod.rs  search.rs  source.rs
helix-docs/src/ports/: embed.rs  fetch.rs  mod.rs  repository.rs  search.rs
helix-docs/src/services/: ingestion.rs  library.rs  mod.rs  search.rs  source.rs
helix-graph-ops/: README.md
helix-graph-ops/specs/: design.md  requirements.md  tasks.md
helix-map/: README.md  design.md  requirements.md
helix-map/src/: extract.rs  indexer.rs  main.rs  scanner.rs  skeleton.rs  storage.rs
helix-repo/: README.md
helix/docs/: agents.md  roadmap.md
helix/specs/: architecture.md  cli.md  entities.md  extensibility.md  graph-schema.md  vision.md  workspace-blueprint.md
helix/specs/research/: chunking-and-link-inference.md
ix-app/: AGENTS.md
ix-cli/: AGENTS.md  Cargo.toml  README.md
ix-cli/specs/: tasks.md
ix-cli/src/: main.rs
ix-core/: AGENTS.md  Cargo.toml  README.md
ix-core/specs/: tasks.md
ix-core/src/: config.rs  entity.rs  lib.rs  markdown.rs  migrate.rs  paths.rs  repo.rs  storage.rs
ix-helixdb-ops/: AGENTS.md
ix-mcp/: AGENTS.md  Cargo.toml  README.md
ix-mcp/specs/: tasks.md
ix-mcp/src/: main.rs
ix-storage-helixdb/: AGENTS.md  Cargo.toml  README.md
ix-storage-helixdb/specs/: tasks.md
ix-storage-helixdb/src/: lib.rs
ix-storage-helixdb/tests/: e2e_sync_search.rs
shared/: AGENTS.md
shared/helix-config/specs/: design.md
shared/helix-daemon/: Cargo.toml
shared/helix-daemon/specs/: design.md  tasks.md
shared/helix-daemon/src/: lib.rs  server.rs
shared/helix-discovery/: AGENTS.md  README.md
shared/helix-discovery/specs/: design.md  requirements.md
shared/helix-embeddings/: AGENTS.md  Cargo.toml  README.md
shared/helix-embeddings/docs/: MODEL_MANAGEMENT.md  PROVIDER_COMPARISON.md
shared/helix-embeddings/specs/: design.md
shared/helix-embeddings/src/: lib.rs
shared/helix-id/: Cargo.toml  README.md
shared/helix-id/specs/: design.md  (+1 more)
(+14 files in other folders)
